--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/js-base64": "^2.3.1",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "element-ui": "2.8.2",
@@ -17,7 +18,8 @@
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
-    "vuex-class": "^0.3.2"
+    "vuex-class": "^0.3.2",
+    "js-sha256": "^0.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
