--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.2",
-    "js-sha256": "^0.9.0"
+    "js-sha256": "^0.9.0",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
