--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build-dev": "vue-cli-service build",
     "build-prod": "vue-cli-service build --mode production",
+    "build-portal": "webpack --config  vue.portal.config.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -30,9 +31,11 @@
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-typescript": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10",
-    "sass-loader": "^7.1.0",
-    "node-sass": "^4.10.0"
+    "webpack-cli": "^3.3.5",
+    "copy-webpack-plugin": "^4.5.2"
   }
 }
