--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --server service",
-    "build-prod": "vue-cli-service build --mode production --server service",
+    "build-prod": "vue-cli-service build --mode production",
     "build-portal": "webpack --config vue.portal.config.js",
     "lint": "vue-cli-service lint"
   },
