--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-typescript": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
+    "copy-webpack-plugin": "^4.5.2",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10",
-    "webpack-cli": "^3.3.5",
-    "copy-webpack-plugin": "^4.5.2"
+    "webpack-cli": "^3.3.6"
   }
 }
